<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home_nav"
        android:icon="@drawable/baseline_home_24" />
    <item
        android:id="@+id/nav_stats"
        android:title="@string/stats_nav"
        android:icon="@drawable/baseline_info_24" />
</menu>
